examples/test_package/Double_dc_no_tool/steps/pl___aircr_rough_run5/#test_results_result.txt
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 33:219.% Problog Inference Result：
goal_reached(1) = 0.2625
goal_reached(2) = 0.1873
goal_reached(3) = 0.1269
goal_reached(4) = 0.0841
goal_reached(5) = 0.0570
overrun_exception(1) = 0.0000
overrun_exception(2) = 0.0030
overrun_exception(3) = 0.0110
overrun_exception(4) = 0.0127
overrun_exception(5) = 0.0114